// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Item snapshot with RUNNING correctly 1`] = `
<nav
  aria-label="Global"
  className="pf-c-nav"
  data-ouia-component-id="OUIA-Generated-Nav-2"
  data-ouia-component-type="PF4/Nav"
  data-ouia-safe={true}
>
  <li
    className="pf-c-nav__item navItem"
    data-ouia-component-id="OUIA-Generated-NavItem-2"
    data-ouia-component-type="PF4/NavItem"
    data-ouia-safe={true}
    onMouseOver={[Function]}
  >
    <a
      aria-current={null}
      className="pf-c-nav__link navItem"
      data-testid="/namespace/workspace"
      onClick={[Function]}
      tabIndex={null}
    >
      <span
        data-testid="recent-workspace-item"
      >
        <div>
          Mock Workspace status indicator, status: 
          RUNNING
        </div>
        <div
          data-testid="patternfly-tooltip"
        >
          <span
            data-testid="tooltip-props"
          >
            {"isContentLeftAligned":true,"className":"titleHover ","position":"top-start","distance":-31,"maxWidth":"50rem"}
          </span>
          <div
            data-testid="tooltip-content"
          >
            workspace
          </div>
          <div
            data-testid="tooltip-placed-to"
          >
            <span>
              workspace
            </span>
          </div>
        </div>
      </span>
      <div>
        Mock NavigationItemWorkspaceActions
      </div>
    </a>
  </li>
</nav>
`;

exports[`Navigation Item snapshot with STOPPED status 1`] = `
<nav
  aria-label="Global"
  className="pf-c-nav"
  data-ouia-component-id="OUIA-Generated-Nav-1"
  data-ouia-component-type="PF4/Nav"
  data-ouia-safe={true}
>
  <li
    className="pf-c-nav__item navItem"
    data-ouia-component-id="OUIA-Generated-NavItem-1"
    data-ouia-component-type="PF4/NavItem"
    data-ouia-safe={true}
    onMouseOver={[Function]}
  >
    <a
      aria-current={null}
      className="pf-c-nav__link navItem"
      data-testid="/namespace/workspace"
      onClick={[Function]}
      tabIndex={null}
    >
      <span
        data-testid="recent-workspace-item"
      >
        <div>
          Mock Workspace status indicator, status: 
          STOPPED
        </div>
        <div
          data-testid="patternfly-tooltip"
        >
          <span
            data-testid="tooltip-props"
          >
            {"isContentLeftAligned":true,"className":"titleHover ","position":"top-start","distance":-31,"maxWidth":"50rem"}
          </span>
          <div
            data-testid="tooltip-content"
          >
            workspace
          </div>
          <div
            data-testid="tooltip-placed-to"
          >
            <span>
              workspace
            </span>
          </div>
        </div>
      </span>
      <div>
        Mock NavigationItemWorkspaceActions
      </div>
    </a>
  </li>
</nav>
`;
